# rl_sar-ARES

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build.sh  download_inference_runtime.sh  run.sh
.qwen/: settings.json
diagnostics_logs/: single_20260611_004457.csv  step_20260611_005516.csv  step_20260611_005517.csv  step_20260611_005756.csv
doc/: joint_mapping_and_new_network_guide.md
docs/superpowers/plans/: 2026-04-16-ares-deployment-implementation.md  2026-04-16-ares-driver-threading.md  2026-04-16-ares-himloco-variant.md  2026-04-16-fl-rl-fr-rr-joint-ordering.md  2026-04-17-motor-debug-toolkit.md  2026-04-17-yaml-config-consolidation.md
docs/superpowers/specs/: 2026-04-16-ares-deployment-design.md  2026-04-16-ares-driver-threading-design.md  2026-04-16-ares-himloco-variant-design.md  2026-04-16-fl-rl-fr-rr-joint-ordering-design.md  2026-04-17-motor-debug-toolkit-design.md  2026-04-17-yaml-config-consolidation-design.md
driver/: CMakeLists.txt
driver/include/: can_interface.hpp  dog_driver.hpp  observations.hpp  robstride.hpp  serial.h
driver/src/: can_interface.cpp  collect_pace_data.cpp  dog_driver.cpp  observations.cpp  robstride.cpp  serial.c
policy/: policies.yaml
policy/ares/: base.yaml
policy/ares/himloco/: config.yaml
policy/ares_himloco/: base.yaml
policy/ares_himloco/himloco/: config.yaml  policy.onnx  policy.onnx1  policy.onnx2  policy_rough.onnx
policy/ares_himloco/himloco_height/: config.yaml
policy/dogv2_cts/cts/: config.yaml  policy.onnx
policy/dream_waq/dream_waq/: config.yaml  policy.onnx
rl_sar-UIKA/: CLAUDE.md  build.sh
rl_sar-UIKA/policy/uika/: base.yaml
rl_sar-UIKA/policy/uika/himloco/: config.yaml
rl_sar-UIKA/robstride_ros_sample_uika/: README.md
rl_sar-UIKA/robstride_ros_sample_uika/src/: main.cpp
rl_sar-UIKA/scripts/: download_inference_runtime.sh  install_pytorch_jetson.sh  setup_env.sh
rl_sar-UIKA/src/rl_sar/: CMakeLists.txt
rl_sar-UIKA/src/rl_sar/src/: rl_real_uika.cpp  uika_mock_publisher.cpp
robstride_ros_sample/include/motor_ros2/: motor_cfg.h
robstride_ros_sample/src/: motor_cfg.cpp
sim_record/: MUJOCO_LOG.TXT  README.md  analyze_limits.py  csv_replay.py  leggedrobot_flat.xml  leggedrobot_flat_fixed.xml  policy.onnx  process_right_knee_limits.py  requirements.txt  schedule.py  sim_record.py
sim_record/examples/: stand.yaml  walk_forward.yaml  walk_turn.yaml
sim_record/meshes/: LF_Foot_link.STL  LF_HipA_link.STL  LF_HipF_link.STL  LF_Knee_link.STL  LR_Foot_link.STL  LR_HipA_link.STL  LR_HipF_link.STL  LR_Knee_link.STL  RF_Foot_link.STL  RF_HipA_link.STL  RF_HipF_link.STL  RF_Knee_link.STL  RR_Foot_link.STL  RR_HipA_link.STL  RR_HipF_link.STL  RR_Knee_link.STL
sim_record/output/: recording.csv  recording_processed.csv  violations.csv
src/rl_sar/: CMakeLists.txt  package.ros2.xml
src/rl_sar/.cache/clangd/index/: ares_driver_core.cpp.80272DE1C517535A.idx  ares_driver_core.hpp.C25F7351C7DA1B9C.idx  ares_driver_node.cpp.203BF7392BBF18B7.idx  inference_runtime.cpp.0AECDF9B1CEDBEAC.idx  inference_runtime.hpp.5CA52E28072CD98F.idx  keyboard_helper.cpp.693CEC66F5888249.idx  keyboard_helper.hpp.5DA7E008F22EB0D4.idx  logger.hpp.989EF2AF97C982FC.idx  loop.hpp.8BB778E705F33DC7.idx  observation_buffer.cpp.BD858EA3DD9BF2E0.idx  observation_buffer.hpp.97413F7C769DF99E.idx  observations_struct.hpp.44CADA9C215A6C3F.idx  rl_core.cpp.1CF45E483C38EE91.idx  rl_core.hpp.B1823EDDEA7A8844.idx  rl_node.cpp.755ED53D73E39974.idx  test_imu_direct.cpp.297C00AAB25F7A41.idx
src/rl_sar/fsm_robot/: fsm_all.hpp  fsm_ares.hpp
src/rl_sar/include/: ares_driver_core.hpp  keyboard_helper.hpp  rl_core.hpp
src/rl_sar/src/: ares_driver_core.cpp  ares_driver_node.cpp  keyboard_helper.cpp  rl_core.cpp  rl_node.cpp  rl_real_ares.cpp
src/rl_sar/test/: test_driver_feedback.cpp  test_imu_direct.cpp  test_onnx_smoke.cpp
tools/: torque_monitor.py
tools/motor_diagnostics/: README.md  motor_diag.cpp  motor_squat_diag.cpp  plot_torque.py
tools/motor_tool/: CMakeLists.txt  install.sh  main.cpp
tools/pace/: convert_pace_csv.py
tools/virtual_gamepad/: joystick.py  main.py  pyproject.toml  vg_client.py  vg_server.py
